# zero_touch

./: .env.template  .gitignore  CLAUDE.md  IMPLEMENTATION_VERIFICATION.md  README.md  UV_SETUP.md  pyproject.toml  requirements.txt  test_serial_extraction.py  zero_touch_provision.py
docs/: NETBOX_RENDERED_CONFIG.md  TECHNICAL_DOCUMENTATION.md
prompts/completed/: 001-zero-touch-provisioning-script.md
ztp/: __init__.py  netbox_client.py  orchestrator.py  ssh_manager.py
